<resources>
    <string name="app_name">HDrezka App</string>
    <string name="runtime">Время: %1$s</string>
    <string name="directors">Режиссеры:</string>
    <string name="countries">Страна: %1$s</string>
    <string name="release_date">Дата выхода: %1$s</string>
    <string name="film_type">Тип: %1$s</string>
    <string name="plot">Сюжет</string>
    <string name="cast">Актеры</string>
    <string name="newest">Новинки</string>
    <string name="search_for_movie">Поиск</string>
    <string name="categories">Категории</string>
    <string name="bookmarks">Закладки</string>
    <string name="choose_country">Выбрать страну</string>
    <string name="exclude_country">Исключить страну</string>
    <string name="choose_genre">Выбрать жанр</string>
    <string name="exclude_genre">Исключить жанр</string>
    <string name="choose_rating">Выбрать рейтинг</string>
    <string name="all">Все</string>
    <string name="films">Фильмы</string>
    <string name="serials">Сериалы</string>
    <string name="multfilms">Мультфильмы</string>
    <string name="anime">Аниме</string>
    <string name="filters">Фильтры</string>
    <string name="watch_later">Досмотреть</string>
    <string name="imdb">IMDb</string>
    <string name="kp">Кинопоиск</string>
    <string name="wa">World Art</string>
    <string name="hr">HDrezka</string>
    <string name="no_connection">Ошибка. Отсутствует интернет соеденение</string>
    <string name="exit">Выйти</string>
    <string name="retry">Повторить</string>
    <string name="register_user_only">Данный раздел доступен только зарегистрированным пользователям</string>
    <string name="nothing_found">Ничего не можем найти в закладках по данному запросу</string>
    <string name="empty_bookmarks">В закладках еще ничего нет</string>
    <string name="enter_film_name">Введите название фильма!</string>
    <string name="empty_watch_later">В этот раздел попадают все просматриваемые тобой сериалы</string>
    <string name="choose_bookmarks">Выбрать каталог закладок</string>
    <string name="ok">Выбрать</string>
    <string name="spoiler">Спойлер</string>
    <string name="cat_interface">Интерфейс</string>
    <string name="cat_app">Приложение</string>
    <string name="cat_main_screen">Выбрать главный экран</string>
    <string name="sort_hint">Сортировать</string>
    <string name="show_hint">Отобразить</string>
    <string name="catalogue">Каталог</string>
    <string name="choose_cat_hint">Выбрать категорию</string>
    <string name="choose_genre_hint">Жанр</string>
    <string name="choose_countries">Выбрать страны</string>
    <string name="choose_genres">Выбрать жанры</string>
    <string name="exclude_countries">Исключить страны</string>
    <string name="exclude_genres">Исключить жанры</string>
    <string name="cancel">Отменить</string>
    <string name="clear">Очистить</string>
    <string name="filters_cleared">Фильтры убраны</string>
    <string name="search_hint">Поиск фильмов и сериалов</string>
    <string name="login">Авторизация</string>
    <string name="register">Регистрация</string>
    <string name="app_settings">Настройки приложения</string>
    <string name="error_occured">Произошла ошибка</string>
    <string name="error_empty">Ничего не найдено</string>
    <string name="error_timeout">Превышен лимит ожидания</string>
    <string name="error_parsing">Ошибка при получении данных</string>
    <string name="no_access">Сайт недоступен. Смените URL на другой</string>
    <string name="choose_year_hint">Выбрать год</string>
    <string name="sort_header">Сортировать</string>
    <string name="type_header">Выбрать тип</string>
    <string name="last">Последние поступления</string>
    <string name="popular">Популярные</string>
    <string name="now">Сейчас смотрят</string>
    <string name="add">Добавить</string>
    <string name="own_provider_hint">Нужно указывать полную ссылку с http/https</string>
    <string name="own_provider">Ссылка на сайт</string>
    <string name="malformed_url">Некорректный URL</string>
    <string name="provider_change">Сменить сайт</string>
    <string name="new_comment_header">Вы действительно хотите добавить новый комментарий?</string>
    <string name="reply">Ответить</string>
    <string name="enter_comment_text">Введите текст комментария!</string>
    <string name="delete">Удалить</string>
    <string name="post_comment_hint">Написать отзыв</string>
    <string name="new_comment_hint">Добавить новый комментарий</string>
    <string name="comments">Комментарии</string>
    <string name="related">Смотреть ещё</string>
    <string name="collection">Все части</string>
    <string name="series_timetable">График выхода серий</string>
    <string name="comment_need_apply">Комментарий отобразится на сайте после проверки администрацией</string>
    <string name="share_body">Смотреть %1$s:\n\n %2$s</string>
    <string name="need_register">Данное действие доступно только зарегистрированным пользователям</string>
    <string name="new_cat">Новый каталог</string>
    <string name="created_cat">Раздел создан</string>
    <string name="new_cat_hint">Введите название раздела</string>
    <string name="career"><b>Карьера</b>: %1$s</string>
    <string name="birthplace">Место рождения: %1$s</string>
    <string name="birthdate">Дата рождения: %1$s</string>
    <string name="deathdate">Дата смерти: %1$s</string>
    <string name="deathplace">Место смерти: %1$s</string>
    <string name="death_in">в возрасте</string>
    <string name="search_page_hint">Введите название фильма или сериала в строку поиска</string>
    <string name="no_player">Отсутствует плеер!</string>
    <string name="no_manager">Отсутствует менеджер загрузок!</string>
    <string name="choose_quality">Выбрать качество</string>
    <string name="translation">Озвучка</string>
    <string name="start_watching">Смотреть</string>
    <string name="download">Скачать</string>
    <string name="perm_write_hint">Без доступа к хранилищу файл не будет сохранен!</string>
    <string name="download_started">Скачивание начато</string>
    <string name="isplayer_hint">Позволяет выбрать свой плеер, а не использовать встроенный</string>
    <string name="isplayer_title">Использовать сторонний плеер</string>
    <string name="ismaxq_hint">Будет выбрано возможное максимальное качество видео</string>
    <string name="ismaxq_title">Автовыбор лучшего качества</string>
    <string name="player_chooser_hint">Всегда будет предложен выбор стороннего плеера</string>
    <string name="player_chooser_title">Выбор плеера</string>
    <string name="isExternalManager_title">Внешний менеджер загрузок</string>
    <string name="isExternalManager_hint">Будет предложен выбор внешнего менеджера</string>
    <string name="settings">Настройки</string>
    <string name="prompt_name">Логин или email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_login">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Логин</string>
    <string name="submit_register">Зарегистрироваться</string>
    <string name="submit_login">Войти</string>
    <string name="confirm_exit">Вы точно хотите выйти?</string>
    <string name="confirm">Выйти</string>
    <string name="films_row_title">Фильмов в ряду</string>
    <string name="tv_show">ТВ шоу</string>
    <string name="provider_timeout">Превышено количество запросов на сайт!</string>
    <string name="rotate_hint">Включить возможность поворота интерфейса в горизонтальный режим</string>
    <string name="rotate_title">Автоповорот экрана</string>
    <string name="films_row_multiplier_title">Множитель подгружаемых фильмов</string>
    <string name="provider_enter_title">Введите URL сайта</string>
    <string name="empty_provider">Пустая ссылка на сайт недоступна!</string>
    <string name="new_provider">Сайт: %1$s</string>
    <string name="next_episode_title">Автопереход на следующую серию</string>
    <string name="next_episode_hint">Позволяет включить автопереход на следующую серию</string>
    <string name="double_click_hint">Пожалуйста, нажмите назад еще раз для того чтобы выйти</string>
    <string name="search_empty">Нам не удалось ничего найти</string>
    <string name="defaultq_hint">Будет выбрано автоматически указанное качество видео</string>
    <string name="defaultq_title">Качество по умолчанию</string>
    <string name="playback_tag">PLAYBACK_TAG</string>
    <string name="button_speedup">Изменить скорость воспроизведения</string>
    <string name="title_select_speed">Установить скорость воспроизведения</string>
    <string name="button_cc">Субтитры</string>
    <string name="msg_subtitle_off">Субтитры отключены</string>
    <string name="title_select_caption">Выбрать субтитры</string>
    <string name="msg_subtitle_on">Субтитры %1$s включены</string>
    <string name="msg_subtitle_cc">Субтитры</string>
    <string name="select_quality">Выберите качество</string>
    <string name="player_title">Сторонний плеер</string>
    <string name="subtitle_download_hint">Всегда будут скачиваться субтитры для внешнего плеера</string>
    <string name="subtitle_download_title">Скачивание субтитров</string>
    <string name="login_pref">fragment_user_tv_login</string>
    <string name="account">Аккаунт</string>
    <string name="register_pref">fragment_user_tv_register</string>
    <string name="exit_pref">fragment_user_tv_exit</string>
    <string name="player">Плеер</string>
    <string name="filter_applied_hint">Происходит поиск с установленными фильтрами. Это может занять значительное время…</string>
    <string name="new_version_hint">Доступна новая версия!</string>
    <string name="ok_text">ОК</string>
    <string name="new_version_pref_title">Автопроверка новой версии</string>
    <string name="new_version_pref_hint">Проверять наличие новой версии приложения</string>
    <string name="trailer">Трейлер</string>
    <string name="no_yt_player">Отсутствует приложение Youtube</string>
    <string name="input_title_listening">Говорите…</string>
    <string name="input_subtitle_listening">Скажите что-нибудь вроде:</string>
    <string name="input_title_error">Извините, речь не разобрана.</string>
    <string name="input_subtitle_error">Попробуйте повторить свой запрос.</string>
    <string name="input_hint_error">Попробуйте снова</string>
    <string name="permission_title">Голосовой поиск можно использовать для поиска фильмов.</string>
    <string name="permission_subtitle">Можно ли получить доступ к микрофону вашего устройства, чтобы включить голосовой поиск?</string>
    <string name="permission_button_allow">Разрешить доступ к микрофону</string>
    <string name="permission_button_reject">Нет</string>
    <string name="permission_rationale">Для голосового поиска требуется это разрешение.</string>
    <string name="permission_button_again">Запросить еще раз?</string>
    <string name="permission_enable_rationale">В доступе отказано, разрешите чтобы использовать голосовой поиск.</string>
    <string name="permission_button_enable">Разрешить запись</string>
    <string name="permission_enable_instructions">На следующем экране нажмите «Разрешения», затем «Микрофон».</string>
    <string name="isAltLoading_title">Альтернативная загрузка данных</string>
    <string name="isAltLoading_hint">Активируйте если ничего не грузится! Возможно поможет</string>
    <string name="announce">В ожидании</string>
    <string name="newest_films_sort_default">Сортировка главного экрана</string>
    <string name="new_films">Горячие новинки</string>
    <string name="app_version">Версия приложения</string>
    <string name="change_to_tv">ТВ версия</string>
    <string name="to_tv">Перейти в ТВ версию</string>
    <string name="select_subtitles_title">Предлагать выбор субтитров</string>
    <string name="select_subtitles_hint">После выбора качества всегда будет предложен выбор субтитров</string>
</resources>