<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.falcofemoralis.hdrezkaapp.views.fragments.UserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fragment_user_ll_auth_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_user_tv_login"
                    style="@style/UserSettingElement"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/login"
                    app:drawableStartCompat="@drawable/ic_baseline_login_24" />

                <TextView
                    android:id="@+id/fragment_user_tv_register"
                    style="@style/UserSettingElement"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/register"
                    app:drawableStartCompat="@drawable/ic_baseline_register_24" />
            </LinearLayout>


            <TextView
                android:id="@+id/fragment_user_tv_exit"
                style="@style/UserSettingElement"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/exit"
                app:drawableStartCompat="@drawable/ic_baseline_exit_to_app_24" />

            <TextView
                android:id="@+id/fragment_user_tv_settings"
                style="@style/UserSettingElement"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/app_settings"
                app:drawableStartCompat="@drawable/ic_baseline_settings_24" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>